--- a/contact.html
+++ b/contact.html
@@ -18,25 +18,25 @@
 </head>
 <body>
 	<header class="page-header">
-		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
-		<a href="index.html" class="namelogo">
+		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
+		<a href="index" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
-			  <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
-			  <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-			  <li><a href="work.html" role="menuitem" class="navigation-list__item">My Work</a></li>
-			  <li><a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contacts</a></li>
+			  <li><a href="index" role="menuitem" class="navigation-list__item">Home</a></li>
+			  <li><a href="about" role="menuitem" class="navigation-list__item">About</a></li>
+			  <li><a href="work" role="menuitem" class="navigation-list__item">My Work</a></li>
+			  <li><a href="contact" role="menuitem" class="navigation-list__item navigation-list__item--active">Contacts</a></li>
 			 </ul>
 		   <div class="dropdown-menu">
 				<button class="dropbtn button">&#9776;</button>
 				<div class="dropdown-menu-list">
-					<a href="index.html">Home </a>
-					<a href="about.html">About</a>
-					<a href="work.html">Work</a>
-					<a href="contact.html">Contact</a>
+					<a href="index">Home </a>
+					<a href="about">About</a>
+					<a href="work">Work</a>
+					<a href="contact">Contact</a>
 				</div>
 			</div>
 		</nav>
@@ -53,10 +53,7 @@
 			Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
 			Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br>
 		</section>
-		<form
-		action="https://www.enformed.io/bbi7dw5v"
-		method="POST" id="gform" class="contact-item"
-		>
+		<form action="https://www.enformed.io/bbi7dw5v" method="POST" id="gform" class="contact-item">
 			<h2>Get in touch:</h2>
 		   <div>
 				<label class="standard-label" for="contact-email">Email: <span class="legend">(required)</span></label> <br>
