--- a/about.html
+++ b/about.html
@@ -21,25 +21,25 @@
 </head>
 <body>
   <header class="page-header">
-	  <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
-	  <a href="index.html" class="namelogo">
+	  <a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
+	  <a href="index" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web Developer </span>
 		</a>
 	  <nav class="main-navigation page-header__item">
 		  <ul role="menubar" class="navigation-list">
-			<li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
-			<li><a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a></li>
-			<li><a href="work.html" role="menuitem" class="navigation-list__item">My Work</a></li>
-			<li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
+			<li><a href="index" role="menuitem" class="navigation-list__item">Home</a></li>
+			<li><a href="about" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a></li>
+			<li><a href="work" role="menuitem" class="navigation-list__item">My Work</a></li>
+			<li><a href="contact" role="menuitem" class="navigation-list__item">Contacts</a></li>
 		  </ul>
 		  <div class="dropdown-menu">
 				<button class="dropbtn button">&#9776;</button>
 				<div class="dropdown-menu-list">
-					<a href="index.html">Home </a>
-					<a href="about.html">About</a>
-					<a href="work.html">Work</a>
-					<a href="contact.html">Contact</a>
+					<a href="index">Home </a>
+					<a href="about">About</a>
+					<a href="work">Work</a>
+					<a href="contact">Contact</a>
 				</div>
 		  </div>
 		</nav>
@@ -193,7 +193,7 @@
 			</div>
 		</div> <!--tech-icon-->
 
-		<a href="AlaEddin-Abugrara-CV.html" class="button hideFromMobile">View my CV</a>
+		<a href="AlaEddin-Abugrara-CV" class="button hideFromMobile">View my CV</a>
 		<a href="file/AlaEddin-Abugrara-CV.pdf" class="button" download>Download B&W CV</a><br>
   </div> <!-- about-container-->
 
