--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 </head>
 <body>
 	<header class="page-header">
-		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
-		<a href="index.html" class="namelogo">
+		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
+		<a href="index" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
-			  <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
-			  <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-			  <li><a href="work.html" role="menuitem" class="navigation-list__item">My Work</a></li>
-			  <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
+			  <li><a href="index" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
+			  <li><a href="about" role="menuitem" class="navigation-list__item">About</a></li>
+			  <li><a href="work" role="menuitem" class="navigation-list__item">My Work</a></li>
+			  <li><a href="contact" role="menuitem" class="navigation-list__item">Contacts</a></li>
 		   </ul>
 		   <div class="dropdown-menu">
 				<button class="dropbtn button">&#9776;</button>
 				<div class="dropdown-menu-list">
-					<a href="index.html">Home </a>
-					<a href="about.html">About</a>
-					<a href="work.html">Work</a>
-					<a href="contact.html">Contact</a>
+					<a href="index">Home </a>
+					<a href="about">About</a>
+					<a href="work">Work</a>
+					<a href="contact">Contact</a>
 				</div>
 		  </div>
 		</nav>
 	</header>
 	<main class="profile-container">
-		<a href="about.html"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"></a>
+		<a href="about"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"></a>
 		<div class="profile-description">
 			<h1>Hello World!</h1>
 			<p>
@@ -51,7 +51,7 @@
 				I am a junior <span class="blueBackground-text"> &nbsp;&lt;web&gt;&nbsp;</span> developer with a background
 				in Political sciences and music, currently based in Munich
 			</p>
-			<a href="work.html">Check out some of my work</a>
+			<a href="work">Check out some of my work</a>
 		</div>
 	</main>
 	<footer>
