--- a/work.html
+++ b/work.html
@@ -18,25 +18,25 @@
 </head>
 <body>
 	<header class="page-header">
-		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
-		<a href="index.html" class="namelogo">
+		<a href="index"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
+		<a href="index" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
-			  <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
-			  <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-			  <li><a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">My Work</a></li>
-			  <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
+			  <li><a href="index" role="menuitem" class="navigation-list__item">Home</a></li>
+			  <li><a href="about" role="menuitem" class="navigation-list__item">About</a></li>
+			  <li><a href="work" role="menuitem" class="navigation-list__item navigation-list__item--active">My Work</a></li>
+			  <li><a href="contact" role="menuitem" class="navigation-list__item">Contacts</a></li>
 		   </ul>
 		   <div class="dropdown-menu">
 				<button class="dropbtn button">&#9776;</button>
 				<div class="dropdown-menu-list">
-					<a href="index.html">Home </a>
-					<a href="about.html">About</a>
-					<a href="work.html">Work</a>
-					<a href="contact.html">Contact</a>
+					<a href="index">Home </a>
+					<a href="about">About</a>
+					<a href="work">Work</a>
+					<a href="contact">Contact</a>
 				</div>
 			</div>
 		</nav>
@@ -158,10 +158,10 @@
 				<h2>Your project</h2>
 				<p>
 					I'm eager to be part of a developers team which I believe is the best way to elevate my skills and becoming a better developer,
-					have a look at my <a href="AlaEddin-Abugrara-CV.html" target="_blank">CV</a>
+					have a look at my <a href="AlaEddin-Abugrara-CV" target="_blank">CV</a>
 					for a listed and more detailed formation about my skills and experiences
 				</p>
-				<a href="contact.html" class="button">Lets get in touch</a>
+				<a href="contact" class="button">Lets get in touch</a>
 			</div>
 
 		</div> <!--project list-->
