--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 					<a href="index">Home </a>
 					<a href="about">About</a>
 					<a href="work">Work</a>
-					<a href="contact">Contact</a>
+					<a href="contact">Contacts</a>
 				</div>
 		  </div>
 		</nav>
@@ -48,22 +48,22 @@
 		<h1 class="about-container__header">ABOUT ME</h1>
 		<h2 class="about-container__item">How I became a web developer</h2>
 		<p class="about-container__item">
-			My interest in programming started a few years back while looking at my wife coding.
-			I wanted to understand what was that weird looking screen with open terminals and lines of,
-			what was for me then, gibberish!
+			My interest for programming started while I was observing my wife coding,
+			I was curious about those terminals full of lines of, what was for me then, gibberish! <br>
+			The idea of writing scripts that gets executed by the computer was next to witchcraft to me, naturally, I wanted to learn it!
+
 		</p>
 		<p class="about-container__item">
-			I started to learn Python but then I stumbled on Javascript! I got immediately hooked,
-			the more I knew the more I wanted to know. It was like learning to play music all over again.
+			While learning PythonI I stumbled on Javascript and I got immediately hooked!
+			Every little improvement got me excited and kept me wanting to know more. It was like learning to play music all over again!
 		</p>
 		<p class="about-container__item">
-			I went through numerous courses on-line cementing my knowledge of HTML, CSS, Javascript and
-			the respective frameworks and libraries. I also took my first peek at back-end technologies
-			(because let’s be honest, there is where the magic start to happen) with the goal of becoming a MERN stack developer.
+			I went through numerous courses on-line cementing my knowledge of HTML5 and the respective frameworks and libraries.
+			I also took a peek at back-end technologies with the goal of becoming a MERN stack developer
 		</p>
 		<p class="about-container__item">
-			Looking back to all that SASS, Bootstrap, jQuery, React, Node, Express, Mongo
-			and whatnot I feel my feet getting wet, but also standing at the edge of an ocean and I am going sailing!
+			Looking back to all that Javascript , CSS, React, Node and whatnot I feel my feet getting wet standing on the edge
+			of an ocean and I am going sailing!
 		</p>
 
 		<div class="tech-icon">
@@ -123,11 +123,6 @@
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/typescript.svg" alt="TypeScript icon">
-				<span class="tooltip-text">TypeScript</span>
-			</div>
-
-			<div class="tech-icon__item">
 				<img class="tech-icon__img img" src="img/nodejs.svg" alt="Node.js icon">
 				<span class="tooltip-text">Node.js</span>
 			</div>
@@ -143,11 +138,6 @@
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/heroku.svg" alt="Heroku icon">
-				<span class="tooltip-text">Heroku</span>
-			</div>
-
-			<div class="tech-icon__item">
 				<img class="tech-icon__img img" src="img/jest.svg" alt="Jest icon">
 				<span class="tooltip-text">Jest</span>
 			</div>
@@ -158,18 +148,8 @@
 			</div>
 
 			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/cucumber.svg" alt="Cucumber icon">
-				<span class="tooltip-text">Cucumber</span>
-			</div>
-
-			<div class="tech-icon__item">
 				<img class="tech-icon__img img" src="img/git.svg" alt="Git icon">
 				<span class="tooltip-text">Git</span>
-			</div>
-
-			<div class="tech-icon__item">
-				<img class="tech-icon__img img" src="img/postman.svg" alt="Postman icon">
-				<span class="tooltip-text">Postman</span>
 			</div>
 
 			<div class="tech-icon__item">
